# TestPythonGtk

./: README.md  io.github.filipestevao.TestPythonGtk.json  io.github.filipestevao.TestPythonGtk.json~  meson.build
data/: io.github.filipestevao.TestPythonGtk.appdata.xml.in  io.github.filipestevao.TestPythonGtk.desktop.in  io.github.filipestevao.TestPythonGtk.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  testpythongtk.gresource.xml  testpythongtk.in  window.py  window.ui
